cards displaying, needs styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,11 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 40px;
+}
+
 /*# sourceMappingURL=style.css.map */
