--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,11 @@
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
 body{
-	background: pink;
+  // background: cyan;
+}
+h1{
+  font-size: 40px;
 }
