--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@
   padding:0;
 }
 body{
-  background: cyan;
+  //background: cyan;
   text-align: justify;
 }
 h1{
@@ -39,6 +39,13 @@ h1 {
 	border: 1px solid rgba(0,123,255,.25);
 	margin: 11px;
 }
+.h5, h5 {
+    font-size: 1rem;
+}
+
+.card-title {
+    height: 78px;
+}
 
 .col-4 {
     max-width: 31.333333%;
@@ -51,7 +58,7 @@ h1 {
 }
 
 .card-img-style{
-	height: 20px;
+	height: 200px;
 }
 //WEATHER WIDGET
 .wwrun {
